cbuild: implement category filtering
The default config now allows building of packages only from
the main and contrib categories. To build more, one explicitly
has to add it.

--- a/etc/config.ini.example
+++ b/etc/config.ini.example
@@ -42,6 +42,8 @@ sources = sources
 keep_stage = no
 # whether to attempt using remote repositories (if available)
 remote = yes
+# categories that are permitted to build; primarily for bulk builds
+categories = main contrib
 
 # flags passed to tools
 [flags]
