main/base-files: fix nsswitch.conf

--- a/main/base-files/files/etc/nsswitch.conf
+++ b/main/base-files/files/etc/nsswitch.conf
@@ -1,15 +1,5 @@
-# /etc/nsswitch.conf
-#
-# See nsswitch.conf(5) for information.
-#
-passwd: 	files
-group: 		files
-shadow: 	files
-
-hosts: 		files mdns dns
-networks: 	files
-
-protocols: 	files
-services: 	files
-ethers: 	files
-rpc: 		files
+# musl itself does not support NSS, however some third-party DNS
+# implementations use the nsswitch.conf file to determine what
+# policy to follow.
+# Editing this file is not recommended.
+hosts: files dns
