cbuild: change semantics of custom builddir
This needs to be on the same filesystem with destdir in order
to avoid cross-device links in specific cases. Therefore, make
it the same as bldroot by default, and have it be the directory
that contains builddir as well as destdir.

--- a/etc/config.ini.example
+++ b/etc/config.ini.example
@@ -16,8 +16,8 @@ bwrap = bwrap
 build_dbg = yes
 # default build root path (absolute or relative to cports)
 build_root = bldroot
-# default builddir path inside bldroot (absolute or relative to cports)
-# will be the default inside bldroot if empty (no separate directory)
+# default physical path for builddir and destdir (absolute or relative
+# to cports); if empty, they will be directly in bldroot
 build_dir =
 # whether ccache will be used in the build
 ccache = no
