--- a/etc/build_profiles/ppc64.ini
+++ b/etc/build_profiles/ppc64.ini
@@ -2,6 +2,7 @@
 endian    = big
 wordsize  = 64
 triplet   = powerpc64-chimera-linux-musl
+repos     = main contrib
 [flags]
 CFLAGS    = -mcpu=970 -mtune=power9
 CXXFLAGS  = ${CFLAGS}
