cbuild, ci: add option to perform update-check in pre-fetch hook
This allows us to make sure that CI pull requests have update-check
properly set up and that we are not merging an outdated version
of something.

It also allows packagers to verify this themselves when adding new
things.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,4 +39,4 @@ jobs:
         run: env PYTHONUNBUFFERED=1 python3.11 cbuild cycle-check
 
       - name: Build and test packages
-        run: env PYTHONUNBUFFERED=1 python3.11 cbuild -t bulk-pkg 'git:master..+!\[ci skip\]'
+        run: env PYTHONUNBUFFERED=1 python3.11 cbuild --update-check -t bulk-pkg 'git:master..+!\[ci skip\]'
