main/opendoas: also give root nopass access by default
It's bad UX when somebody uses doas in root shell by muscle
memory and the program denies it.

--- a/main/opendoas/files/doas.conf
+++ b/main/opendoas/files/doas.conf
@@ -2,3 +2,9 @@
 
 # Give users in the wheel group access.
 permit persist :wheel
+
+# Give root access to other users.
+permit nopass root
+
+# Give root access to itself, no password, transparently.
+permit nopass keepenv setenv { PATH } root as root
