main/zfs: update to 2.2.0

--- a/main/zfs/files/ckms.ini
+++ b/main/zfs/files/ckms.ini
@@ -1,6 +1,6 @@
 [general]
 name = zfs
-version = 2.1.13
+version = 2.2.0
 strip = yes
 make = gmake
 initramfs = yes
@@ -17,30 +17,9 @@ post_build =
         -a "${CKMS_KERNEL_MACHINE}" \
         -k "${CKMS_KERNEL_VERSION}" \
         -t "${CKMS_STATEDIR}"
-[module.zavl]
-path = module/avl
-dest = extra/avl/avl
-[module.znvpair]
-path = module/nvpair
-dest = extra/nvpair/znvpair
-[module.zunicode]
-path = module/unicode
-dest = extra/unicode/zunicode
-[module.zcommon]
-path = module/zcommon
-dest = extra/zcommon/zcommon
 [module.zfs]
-path = module/zfs
-dest = extra/zfs/zfs
-[module.icp]
-path = module/icp
-dest = extra/icp/icp
-[module.zlua]
-path = module/lua
-dest = extra/lua/zlua
+path = module
+dest = extra
 [module.spl]
-path = module/spl
-dest = extra/spl/spl
-[module.zzstd]
-path = module/zstd
-dest = extra/zstd/zzstd
+path = module
+dest = extra
