main/mesa: update drirc for gnome on radeonsi to match new mesa

--- a/main/mesa/files/00-radeonsi-gnome-no-glthread.conf
+++ b/main/mesa/files/00-radeonsi-gnome-no-glthread.conf
@@ -3,7 +3,7 @@
         <application name="GNOME Shell" executable="gnome-shell">
             <!-- This works around graphical glitching issues with glthread under GNOME (Wayland).
                  See: https://gitlab.freedesktop.org/mesa/mesa/-/issues/9141 -->
-            <option name="mesa_glthread" value="false"/>
+            <option name="mesa_glthread_app_profile" value="0"/>
         </application>
-	</device>
+    </device>
 </driconf>
