build_profiles: remove default flags for aarch64 and riscv64
Some code seems to do bad stuff like building their runtime-detect
bits with special flags but putting those flags before the flags
passed by cbuild. What we specify is already the default.

These are the only two archs where we were overriding things
anyway.

--- a/etc/build_profiles/aarch64.ini
+++ b/etc/build_profiles/aarch64.ini
@@ -5,6 +5,6 @@ triplet  = aarch64-chimera-linux-musl
 repos     = main contrib
 goarch    = arm64
 [flags]
-CFLAGS   = -march=armv8-a
+CFLAGS   =
 CXXFLAGS = ${CFLAGS}
 FFLAGS   = ${CFLAGS}
