--- a/etc/build_profiles/riscv64.ini
+++ b/etc/build_profiles/riscv64.ini
@@ -8,6 +8,6 @@ triplet  = riscv64-chimera-linux-musl
 repos    = main contrib
 goarch   = riscv64
 [flags]
-CFLAGS   = -march=rv64gc -mabi=lp64d
+CFLAGS   =
 CXXFLAGS = ${CFLAGS}
 FFLAGS   = ${CFLAGS}
